changes in product module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #path configuration
 user.profile.image.path=images/users/
+product.image.path=images/products/
 
 #
 spring.servlet.multipart.max-file-size=10MB
